已将管理端的商家页面处理

--- a/templates/my_admin/index.html
+++ b/templates/my_admin/index.html
@@ -109,7 +109,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-box-row row-fluid">
-                                    <a href="#" class="btn-box big span4"><i class=" icon-briefcase"></i><b>0</b>
+                                    <a href="#" class="btn-box big span4"><i class=" icon-briefcase"></i><b>{{ num }}</b>
                                         <p class="text-muted">
                                             商家用户总数</p>
                                     </a><a href="#" class="btn-box big span4"><i class="icon-user"></i><b>0</b>
