商家端和客户端页面完成

--- a/templates/merchant_admin/merchant.html
+++ b/templates/merchant_admin/merchant.html
@@ -6,7 +6,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>商家主页姓名</title>
+	<title>{{ content.code.username }}</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!--[if lt IE 9]>
