--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html lang="zh-cn" class="no-js">
 {% load static %}
+<html lang="zh-cn" class="no-js">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Unfolder用户DEMO</title>
-<link href='https://fonts.useso.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-<link rel="stylesheet" type="text/css" href="{% static 'css/htmleaf-demo.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'css/swiper.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-<link rel="stylesheet" href="{% static 'css/login3.css' %}"> <!-- Resource style -->
+<link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/htmleaf-demo.css' %}">
+<link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/style3.css' %}">
+<link rel="stylesheet" href="{% static 'css/login3.css' %}">
 
 </head>
 <body>
@@ -32,17 +32,50 @@
 	</div>
 </div>
 <header class="cd-main-header animate-search">
-	<div class="cd-logo"><a href="#"><img src="{% static 'img/logo.png' %}" alt="Logo" style="width: 50%"></a></div>
+	<div class="cd-logo"><a href="#"><img src="{% static 'img/logo.png' %}" alt="Logo"></a></div>
 
 	<nav class="cd-main-nav-wrapper">
 		<a href="#search" class="cd-search-trigger cd-text-replace">Search</a>
+		<ul class="cd-main-nav navbar-left">
+			<li class="dropdown" style="left: 150px">
+				<a  href="#" id="dropdownMenu1" data-toggle="dropdown">上海
+					<span class="caret"></span>
+				</a>
+				<div  class="dropdown-menu citylist" role="menu" aria-labelledby="dropdownMenu1">
+					<div class="group">
+						<h3 style="font-size: 12px;color: #999; width: 68px;overflow: hidden;padding: 10px 10px 0;position: static;">国内城市</h3>
+						<div class="citya" style="padding-left: 10px;">
+							<a class="cities">上海</a>
+							<a class="cities">北京</a>
+							<a class="cities">广州</a>
+							<a class="cities">深圳</a>
+							<a class="cities">天津</a>
+							<a class="cities">杭州</a>
+							<a class="cities">南京</a>
+							<a class="cities">苏州</a>
+							<a class="cities">成都</a>
+							<a class="cities">武汉</a>
+							<a class="cities">重庆</a>
+							<a class="cities">西安</a>
+						</div>
+						<h3 style="font-size: 12px;color: #999; width: 68px;overflow: hidden;padding: 10px 10px 0;position: static;margin-top: 5px">国外城市</h3>
+						<div class="citya" style="padding-left: 10px;">
+							<a class="cities">东京</a>
+							<a class="cities">首尔</a>
+							<a class="cities">曼谷</a>
+							<a class="cities">巴黎</a>
+						</div>
+						<a style="font-size: 12px;color: #999; overflow: hidden;position: static;margin-top: 10px;float: right" href="#">更多城市 ></a>
+					</div>
+				</div>
+			</li>
+		</ul>
 		<ul class="cd-main-nav">
 			<li><a href= "#">店铺</a></li>
 			<li><a href="#">目的地</a></li>
 			<li><a href="#">Blog</a></li>
 			<li style="background-color: #5c5d6a"><a data-toggle="modal" href="#login1" data-target="#login1" style="color: white">登陆</a></li>
 			<li  style="background-color: #5c5d6a"><a data-toggle="modal" href="#regist1" data-target="#regist1" style="color: white">注册</a></li>
-
 		</ul> <!-- .cd-main-nav -->
 	</nav> <!-- .cd-main-nav-wrapper -->
 
@@ -81,13 +114,13 @@
 					<div class="tab-pane fade active in" id="homes">
 						<form class="form-wrap">
 							<input type="text" class="form-control inp" name="name" placeholder="目的地/心情">
-							<a href="#" class="primary-btn text-uppercase" style="margin-top: 155px;">开始搜索</a>
+							<a href="#" class="primary-btn text-uppercase" style=" margin-top: 155px;">开始搜索</a>
 						</form>
 					</div>
 					<div class="tab-pane fade" id="ios" >
 						<form name="form1" action="" method="get" class="form-wrap">
 							<input class="form-control" id="citySelect" value="城市名" >
-							<a href="#" class="primary-btn text-uppercase" style="margin-top: 155px;">开始搜索</a>
+							<a href="#" class="primary-btn text-uppercase" >开始搜索</a>
 						</form>
 					</div>
 					<div class="tab-pane fade" id="jmeter">
@@ -98,7 +131,280 @@
 		</div>
 	</div>
 </section>
+<section id="sort" style="margin-top: 400px;">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="whitebox">
+					<div class="boxheader"><img src="img/icon/food.png" style=" vertical-align: middle;"><span class="boxheadertext">美食</span><a>全部 ></a></div>
+					<div class="boxmodal">
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
 
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="whitebox">
+					<div class="boxheader"><img src="img/icon/happy.png" style=" vertical-align: middle;"><span class="boxheadertext">休闲娱乐</span><a>全部 ></a></div>
+					<div class="boxmodal">
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="boxelment">
+							<div class="shops">
+								<a href="#">
+									<img src="img/shop1.jpg">
+								</a>
+								<div class="shops-tag">
+									<a href="#"><h3>asdasd</h3></a>
+									<div class="star-info">
+										<span class="star star-50"></span>
+										<span class="comment">19593条点评</span>
+									</div>
+									<div class="area-info">
+										<span class="region-name" style="float: right;">阜成门</span>
+										<span class="maincate-name">老北京火锅</span>
+									</div>
+									<div class="avg">
+										<span>¥99/人</span>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <div id="search" class="cd-main-search">
 	<form>
@@ -120,19 +426,19 @@
 			<h3>News</h3>
 			<ul>
 				<li>
-					<a class="image-wrapper" href="#"><img src="{% static 'img/placeholder.png' %}" alt="News image"></a>
+					<a class="image-wrapper" href="#"><img src="img/placeholder.png" alt="News image"></a>
 					<h4><a class="cd-nowrap" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h4>
 					<time datetime="2016-01-12">Feb 03, 2016</time>
 				</li>
 
 				<li>
-					<a class="image-wrapper" href="#0"><img src="{% static 'img/placeholder.png' %}" alt="News image"></a>
+					<a class="image-wrapper" href="#0"><img src="img/placeholder.png" alt="News image"></a>
 					<h4><a class="cd-nowrap" href="#0">Incidunt voluptatem adipisci voluptates fugit beatae culpa eum, distinctio, assumenda est ad</a></h4>
 					<time datetime="2016-01-12">Jan 28, 2016</time>
 				</li>
 
 				<li>
-					<a class="image-wrapper" href="#0"><img src="{% static 'img/placeholder.png' %}" alt="News image"></a>
+					<a class="image-wrapper" href="#0"><img src="img/placeholder.png" alt="News image"></a>
 					<h4><a class="cd-nowrap" href="#0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, esse.</a></h4>
 					<time datetime="2016-01-12">Jan 12, 2016</time>
 				</li>
@@ -201,9 +507,9 @@
 </div>
 
 <!--<div id='Login_start' style="position: absolute;" >-->
-<script src="{% static 'js/jquery-2.1.1.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/modernizr.js' %}"></script> <!-- Modernizr -->
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/modernizr.js' %}"></script>
 <script type="text/javascript">
     //登录到注册
     $("#toRegist").on('click',function(){
@@ -247,9 +553,13 @@
         });
     });
 </script>
+
+
+
 <script src="{% static 'js/main3.js' %}"></script> <!-- Resource jQuery -->
-<script src="{% static 'js/apple.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/swiper.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/citySelect.js' %}"></script>
+<script src="{% static 'js/swiper.min.js' %}"></script>
+
 
 </body>
 </html>
