--- a/templates/demo/merchantindex.html
+++ b/templates/demo/merchantindex.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Unfolder用户DEMO</title>
+<title>{{ shops.code.username }}</title>
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/htmleaf-demo.css' %}">
 <link rel="stylesheet" href="{% static 'css/reset.css' %}">
@@ -97,7 +97,7 @@
 			<div class=" whitebox" style="padding: 20px;">
 				<h1 style="color:#333; font-weight: 700;font-size:22px;line-height:33px;margin-top: -7.5px;">受到煎熬i收到</h1>
 				<div class="brief-info">
-					<ul class="show_number" style="margin-top: 10px;"><li><div class="atar_Show"><p tip="2.5"></p></div></li></ul>
+					<ul class="show_number" style="margin-top: 10px;"><li><div class="atar_Show"><p tip="{{ shops.shop_grade }}"></p></div></li></ul>
 					<span class="item">1条评论</span>
 					<span class="item">人均：-</span>
 					<span>
