--- a/templates/my_admin/shopuser_list.html
+++ b/templates/my_admin/shopuser_list.html
@@ -217,13 +217,13 @@
                                 <div id="pages" class="pagination pagination-centered">
                                     <ul class="pagination">
                                         {% if shop.has_previous %}
-                                        <li><a class="active" href="?page={{ shop.previous_page_number }}"><i class="icon-double-angle-left"></i></a></li>
+                                        <li><a class="active" href="?page={{ shop.previous_page_number }}">喵喵喵<i class="icon-double-angle-left"></i></a></li>
                                         {% endif %}
                                          <span class="current">
                                              {{ shop.number }} / {{ shop.paginator.num_pages }}
                                          </span>
                                          {% if shop.has_next %}
-                                        <li><a class="active" href="?page={{ shop.next_page_number }}"><i class="icon-double-angle-right"></i></a></li>
+                                        <li><a class="active" href="?page={{ shop.next_page_number }}"><i class="icon-double-angle-right"></i>咩咩咩</a></li>
                                          {% endif %}
                                     </ul>
                                 </div>
