--- a/templates/demo/merchantindex.html
+++ b/templates/demo/merchantindex.html
@@ -97,7 +97,7 @@
 			<div class=" whitebox" style="padding: 20px;">
 				<h1 style="color:#333; font-weight: 700;font-size:22px;line-height:33px;margin-top: -7.5px;">受到煎熬i收到</h1>
 				<div class="brief-info">
-					<ul class="show_number" style="margin-top: 10px;"><li><div class="atar_Show"><p tip="{{ shops.shop_grade7 }}"></p></div></li></ul>
+					<ul class="show_number" style="margin-top: 10px;"><li><div class="atar_Show"><p tip="{{ shops.shop_grade }}"></p></div></li></ul>
 					<span class="item">1条评论</span>
 					<span class="item">人均：-</span>
 					<span>
@@ -147,7 +147,7 @@
 							<div class="bg"></div>
 
 							<li style="z-index:1;"><img src="img/1.jpg" /></li>
-							<li><img src="img/2.jpg" /></li>
+							<li><img src="" /></li>
 							<li><img src="img/3.jpg" /></li>
 							<li><img src="img/4.jpg" /></li>
 							<li><img src="img/5.jpg" /></li>
