--- a/templates/demo/merchantindex.html
+++ b/templates/demo/merchantindex.html
@@ -87,7 +87,7 @@
 	<div class="container">
 		<div class="row">
 			<ul class="breadcrumb">
-				<li><a href="#">{{ shops.cityen.city }}</a></li>
+				<li><a href="#">{{ shops.city.city }}</a></li>
 				<li><a href="#">美食</a></li>
 				<li><a href="#">奉贤区</a></li>
 				<li><a href="#">外滩</a></li>
