--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/reset.css' %}">
-    <link rel="stylesheet" href="{% static 'css/htmleaf-demo.css' %}">
+<link rel="stylesheet" href="{% static 'css/htmleaf-demo.css' %}">
 <link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/style3.css' %}">
 <link rel="stylesheet" href="{% static 'css/login3.css' %}">
@@ -305,12 +305,13 @@
 	<div class="modal-dialog" style="width: 400px;margin-top: 5%;">
 		<div class="modal-content" style="background-color: #eeeeeead;">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true" id="close-login" style="display: none">&times;</button>
-			<div class="modal-body" style="margin: 15px;">
+			<form class="modal-body" action="/service/user/login/" style="margin: 15px;" method="post">
+                {% csrf_token %}
 				<div id="form_container1">
-					<input type="text" class="form-control" placeholder="手机号/用户名" id="login_number" value="admin" style="margin-bottom: 30px" />
-					<input type="password" class="form-control" placeholder="密码" id="login_password" />
+					<input type="text" class="form-control" placeholder="手机号/用户名" id="login_number" name="number" value="admin" style="margin-bottom: 30px" />
+					<input type="password" class="form-control" placeholder="密码" name="password" id="login_password" />
 					<div id="rememberOrfindPwd"><span><input id="remember" type="checkbox" style="margin-bottom: -1.5px;"></span><span style="color:#000000;    margin-right: 80px;">记住密码</span><span style="color:#000000">忘记密码</span></div>
-					<div style="text-align: center;margin-top: 5px;margin-bottom: 28px;"><input type="button" value="登录" class="button" id="login_btn" /></div>
+					<div style="text-align: center;margin-top: 5px;margin-bottom: 28px;"><input type="submit" value="登录" class="button" id="login_btn" /></div>
 				</div>
 				<div style="margin-top: 50px;text-align: center;"><p>还没有账号?<a id='toRegist'>立即注册</a></p></div>
 				<div class="social">
@@ -319,7 +320,7 @@
 					<a href=""><img src="{% static 'img/icon/weixin.png' %}" alt="weixin"></a>
 					<a href=""><img src="{% static 'img/icon/weibo.png' %}" alt="weibo"></a>
 				</div>
-			</div>
+			</form>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
 </div>
