--- a/templates/demo/merchantindex.html
+++ b/templates/demo/merchantindex.html
@@ -86,6 +86,18 @@
 <section id="sort" style="margin-top: 20px;">
 	<div class="container">
 		<div class="row">
+
+{% load django_bootstrap_breadcrumbs %}
+
+{% block breadcrumbs %}
+    {% clear_breadcrumbs %}
+    {% breadcrumb "Home" "/" %}
+    {% breadcrumb "Users and groups" "users_and_groups_index" %}
+{% endblock %}
+
+{% block content %}
+    {% render_breadcrumbs %}
+{% endblock %}
 			<ul class="breadcrumb">
 				<li><a href="#">{{ shop.shops.city.city }}</a></li>
 				<li><a href="#">{{ mmm.cat_main_name }}</a></li>
