--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -349,6 +349,7 @@
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/modernizr.js' %}"></script>
+<script src="{% static 'js/apple.js' %}"></script>
 <script type="text/javascript">
     //登录到注册
     $("#toRegist").on('click',function(){
